--- a/templates/sample4.html
+++ b/templates/sample4.html
@@ -97,7 +97,7 @@
                     </tr>
                     <tr>
                         <td class="w-100">
-                            <div style="width:900px;">
+                            <div style="width:9ุ60px;margin:0 auto;">
                                 <canvas id="bar" ></canvas>
                             </div>
                         </td>
